# storepay-py

./: .gitignore  README.md  pyproject.toml
src/mongolian_payment_storepay/: __init__.py  client.py  config.py  errors.py  types.py
tests/: test_client.py
