[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongolian-payment-storepay"
version = "1.0.0"
description = "StorePay payment gateway SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
